fix: fix big gap between subheading and text

--- a/contact-us/styling.css
+++ b/contact-us/styling.css
@@ -1,5 +1,6 @@
 #titre {
     display: block;
+    padding-bottom: 10px;
 }
 .row {
     display: flex;
